Fixed header tags and added wrap

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
 }
 
 #left-column {
-  background-color: rgb(37, 126, 146);
+  background-color: rgb(37, 142, 146);
   flex-grow: 1;
 }
 #right-column {
